--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="./styles/reset.css">
   <link rel="stylesheet" href="./styles/index.css">
   <script defer src="./scripts/index.js"></script>
+  <script defer src="./scripts/a.out.js"></script>
 </head>
 
 <body>
